--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,11 +3,13 @@ cffi==1.12.3
 Django==2.2.3
 django-bootstrap3==11.1.0
 django-braces==1.13.0
+django-cleanup==4.0.0
 django-cors-headers==3.0.2
 django-crispy-forms==1.7.2
 djangorestframework==3.9.4
 misaka==2.1.1
 Pillow==6.1.0
+pkg-resources==0.0.0
 pycparser==2.19
 pytz==2019.1
 reverse==0.1.0
